refactored: landing overflow-x issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,5 @@ html {
   height: 100%;
   width: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
